src/mapa/MapaTesoroParser.py
# Generated from MapaTesoro.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class MapaTesoroParser ( Parser ):

    grammarFileName = "MapaTesoro.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'te da'", "'puntos'", "'est\\u00E1 enterrado en'", 
                     "','" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "STRING", "NUMBER", "NEWLINE", "WS" ]

    RULE_mapa = 0
    RULE_titulo = 1
    RULE_puntos = 2
    RULE_localizacion = 3
    RULE_coordenada = 4

    ruleNames =  [ "mapa", "titulo", "puntos", "localizacion", "coordenada" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    STRING=5
    NUMBER=6
    NEWLINE=7
    WS=8

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class MapaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def titulo(self):
            return self.getTypedRuleContext(MapaTesoroParser.TituloContext,0)


        def EOF(self):
            return self.getToken(MapaTesoroParser.EOF, 0)

        def puntos(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MapaTesoroParser.PuntosContext)
            else:
                return self.getTypedRuleContext(MapaTesoroParser.PuntosContext,i)


        def localizacion(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MapaTesoroParser.LocalizacionContext)
            else:
                return self.getTypedRuleContext(MapaTesoroParser.LocalizacionContext,i)


        def getRuleIndex(self):
            return MapaTesoroParser.RULE_mapa

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMapa" ):
                listener.enterMapa(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMapa" ):
                listener.exitMapa(self)




    def mapa(self):

        localctx = MapaTesoroParser.MapaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_mapa)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 10
            self.titulo()
            self.state = 15
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==5:
                self.state = 13
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
                if la_ == 1:
                    self.state = 11
                    self.puntos()
                    pass

                elif la_ == 2:
                    self.state = 12
                    self.localizacion()
                    pass


                self.state = 17
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 18
            self.match(MapaTesoroParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TituloContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STRING(self):
            return self.getToken(MapaTesoroParser.STRING, 0)

        def NEWLINE(self):
            return self.getToken(MapaTesoroParser.NEWLINE, 0)

        def getRuleIndex(self):
            return MapaTesoroParser.RULE_titulo

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTitulo" ):
                listener.enterTitulo(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTitulo" ):
                listener.exitTitulo(self)




    def titulo(self):

        localctx = MapaTesoroParser.TituloContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_titulo)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 20
            self.match(MapaTesoroParser.STRING)
            self.state = 21
            self.match(MapaTesoroParser.NEWLINE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PuntosContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STRING(self):
            return self.getToken(MapaTesoroParser.STRING, 0)

        def NUMBER(self):
            return self.getToken(MapaTesoroParser.NUMBER, 0)

        def NEWLINE(self):
            return self.getToken(MapaTesoroParser.NEWLINE, 0)

        def getRuleIndex(self):
            return MapaTesoroParser.RULE_puntos

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPuntos" ):
                listener.enterPuntos(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPuntos" ):
                listener.exitPuntos(self)




    def puntos(self):

        localctx = MapaTesoroParser.PuntosContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_puntos)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 23
            self.match(MapaTesoroParser.STRING)
            self.state = 24
            self.match(MapaTesoroParser.T__0)
            self.state = 25
            self.match(MapaTesoroParser.NUMBER)
            self.state = 26
            self.match(MapaTesoroParser.T__1)
            self.state = 27
            self.match(MapaTesoroParser.NEWLINE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LocalizacionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STRING(self):
            return self.getToken(MapaTesoroParser.STRING, 0)

        def coordenada(self):
            return self.getTypedRuleContext(MapaTesoroParser.CoordenadaContext,0)


        def NEWLINE(self):
            return self.getToken(MapaTesoroParser.NEWLINE, 0)

        def getRuleIndex(self):
            return MapaTesoroParser.RULE_localizacion

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLocalizacion" ):
                listener.enterLocalizacion(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLocalizacion" ):
                listener.exitLocalizacion(self)




    def localizacion(self):

        localctx = MapaTesoroParser.LocalizacionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_localizacion)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 29
            self.match(MapaTesoroParser.STRING)
            self.state = 30
            self.match(MapaTesoroParser.T__2)
            self.state = 31
            self.coordenada()
            self.state = 33
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==7:
                self.state = 32
                self.match(MapaTesoroParser.NEWLINE)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CoordenadaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NUMBER(self, i:int=None):
            if i is None:
                return self.getTokens(MapaTesoroParser.NUMBER)
            else:
                return self.getToken(MapaTesoroParser.NUMBER, i)

        def getRuleIndex(self):
            return MapaTesoroParser.RULE_coordenada

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCoordenada" ):
                listener.enterCoordenada(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCoordenada" ):
                listener.exitCoordenada(self)




    def coordenada(self):

        localctx = MapaTesoroParser.CoordenadaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_coordenada)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 35
            self.match(MapaTesoroParser.NUMBER)
            self.state = 36
            self.match(MapaTesoroParser.T__3)
            self.state = 37
            self.match(MapaTesoroParser.NUMBER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx





